<resources>
    <string name="app_name">Plink</string>
    // MainMenu strings
    <string name="test_printer_owner_landing">Printer Owner Landing-Test</string>
    <string name="test_send_document">Manage Print Jobs</string>
    <string name="test_map_layout">Map Layout-Test</string>
    <string name="test_login">Login Screen-Test</string>
    // Activity Name strings
    // MapsActivity strings
    // Login strings
    // Strings in filter_menu
    <string name="test_post_document">Send POST</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    // NavigationMenu Strings
    <string name="nav_drawer_Settings">Settings</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_drawer_Logout">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    // SettingsFragment

    // Google Client Auth
    <string name="backend_server_id">21063463146-ilb4f9tl0ijq9hakjrhl8s3650kt1hh1.apps.googleusercontent.com</string>
    <string name="open_document">Open Document</string>
    <string name="upload_document_button">Upload</string>
    <string name="app_tagline">Print Anywhere</string>

    // Printer Settings
    <string name="text_color_settings">Show Color Printers Only</string>
    <string name="switch_active_printer_text">Active </string>
    <string name="text_set_price">Set Price per Print</string>
    <string name="text_price_zero_decimal">$0.</string>
    <string name="text_save_changes">Save Changes</string>
    <string name="text_choose_document">Choose Document</string>
    <string name="text_print_button">PRINT</string>
    <string name="text_no_document">No Document Selected</string>
    <string name="toolbar_refresh">Refresh</string>
    <string name="nav_drawer_About">About</string>
    <string name="title_printer_owner_menu">Printer Owner</string>
    <string name="nav_menu_General">General</string>
    <string name="nav_drawer_owner_overview">See Your Earnings</string>
    <string name="nav_drawer_Owner_manage">Manage Printers</string>
    <string name="select_printer_paper">Select Paper Available</string>
    <string name="title_printer_settings">Register a Printer</string>
    <string name="title_printer_display">Print</string>
    <string name="switch_offline_printer_text">Offline</string>
    <string name="notify_user_paragraph">You are trying to sign into Plink using a Google account that is not registered with our service. With your permission, we will store the following information and register you:</string>
    <string name="sign_in_confirm_text">OK, Sounds Good!</string>
    <string name="sign_in_cancel_text"><u>No, take me back</u></string>
    <string name="userInfoTextString">Name: %1$s\nEmail: %2$s\n</string>
    <string-array name="array_colors">
        <item name="text_black_and_white">Black and White</item>
        <item name="text_color">Color</item>
    </string-array>
    <string-array name="array_paper_size">
        <item name="select_paper_size_8_11">8.5 x 11</item>
        <item name="select_paper_size_11_17">11 x 17</item>
    </string-array>
    //Braintree Test Token
    <string name="Braintree_test_client_token">eyJ2ZXJzaW9uIjoyLCJhdXRob3JpemF0aW9uRmluZ2VycHJpbnQiOiJhZTdjMThiMTY3MTc3OGJjN2VjODhmZDIyM2E3MzYxMTg2YjZlZTM2NjgxYWZhMmJmMzg1MTNiNzc3YWVkZWMyfGNyZWF0ZWRfYXQ9MjAxOS0wMS0zMVQwMDowNDoxOC4wMzk0MjMyOTUrMDAwMFx1MDAyNm1lcmNoYW50X2lkPTM0OHBrOWNnZjNiZ3l3MmJcdTAwMjZwdWJsaWNfa2V5PTJuMjQ3ZHY4OWJxOXZtcHIiLCJjb25maWdVcmwiOiJodHRwczovL2FwaS5zYW5kYm94LmJyYWludHJlZWdhdGV3YXkuY29tOjQ0My9tZXJjaGFudHMvMzQ4cGs5Y2dmM2JneXcyYi9jbGllbnRfYXBpL3YxL2NvbmZpZ3VyYXRpb24iLCJncmFwaFFMIjp7InVybCI6Imh0dHBzOi8vcGF5bWVudHMuc2FuZGJveC5icmFpbnRyZWUtYXBpLmNvbS9ncmFwaHFsIiwiZGF0ZSI6IjIwMTgtMDUtMDgifSwiY2hhbGxlbmdlcyI6W10sImVudmlyb25tZW50Ijoic2FuZGJveCIsImNsaWVudEFwaVVybCI6Imh0dHBzOi8vYXBpLnNhbmRib3guYnJhaW50cmVlZ2F0ZXdheS5jb206NDQzL21lcmNoYW50cy8zNDhwazljZ2YzYmd5dzJiL2NsaWVudF9hcGkiLCJhc3NldHNVcmwiOiJodHRwczovL2Fzc2V0cy5icmFpbnRyZWVnYXRld2F5LmNvbSIsImF1dGhVcmwiOiJodHRwczovL2F1dGgudmVubW8uc2FuZGJveC5icmFpbnRyZWVnYXRld2F5LmNvbSIsImFuYWx5dGljcyI6eyJ1cmwiOiJodHRwczovL29yaWdpbi1hbmFseXRpY3Mtc2FuZC5zYW5kYm94LmJyYWludHJlZS1hcGkuY29tLzM0OHBrOWNnZjNiZ3l3MmIifSwidGhyZWVEU2VjdXJlRW5hYmxlZCI6dHJ1ZSwicGF5cGFsRW5hYmxlZCI6dHJ1ZSwicGF5cGFsIjp7ImRpc3BsYXlOYW1lIjoiQWNtZSBXaWRnZXRzLCBMdGQuIChTYW5kYm94KSIsImNsaWVudElkIjpudWxsLCJwcml2YWN5VXJsIjoiaHR0cDovL2V4YW1wbGUuY29tL3BwIiwidXNlckFncmVlbWVudFVybCI6Imh0dHA6Ly9leGFtcGxlLmNvbS90b3MiLCJiYXNlVXJsIjoiaHR0cHM6Ly9hc3NldHMuYnJhaW50cmVlZ2F0ZXdheS5jb20iLCJhc3NldHNVcmwiOiJodHRwczovL2NoZWNrb3V0LnBheXBhbC5jb20iLCJkaXJlY3RCYXNlVXJsIjpudWxsLCJhbGxvd0h0dHAiOnRydWUsImVudmlyb25tZW50Tm9OZXR3b3JrIjp0cnVlLCJlbnZpcm9ubWVudCI6Im9mZmxpbmUiLCJ1bnZldHRlZE1lcmNoYW50IjpmYWxzZSwiYnJhaW50cmVlQ2xpZW50SWQiOiJtYXN0ZXJjbGllbnQzIiwiYmlsbGluZ0FncmVlbWVudHNFbmFibGVkIjp0cnVlLCJtZXJjaGFudEFjY291bnRJZCI6ImFjbWV3aWRnZXRzbHRkc2FuZGJveCIsImN1cnJlbmN5SXNvQ29kZSI6IlVTRCJ9LCJtZXJjaGFudElkIjoiMzQ4cGs5Y2dmM2JneXcyYiIsInZlbm1vIjoib2ZmIn0=</string>
    <string name="number_one">1</string>
    <string name="textview_number_copies">Number of Copies</string>
    <string name="printer_name">Printer Name</string>
    <string name="price_per_print_text">Price per Page: $</string>
    <string name="text_price">Price</string>
    <string name="text_number_of_pages">Number of Pages</string>
    <string name="text_total_price">Total Price:</string>
    <string name="text_has_no_printers">No registered printers found. Press the + in the upper right hand corner to get started registering a new Plink printer!</string>
    <string name="text_show_inactive_printers">Show Inactive</string>
    <string name="snippet_text_owner">You own this printer</string>
    <string name="snippet_text">Press to print to this printer</string>
    <string name="textview_low_price">Minimum Price</string>
    <string name="textview_high_price">Maximum Price</string>
    <string name="text_has_no_jobs">No print jobs found. To start a print job, select a printer on the map.</string>
    <string name="nav_drawer_Manage_Jobs">Manage Print Jobs</string>
    <string name="toolbar_add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_page_1_bt_setup">You\'re about to setup a printer with the Plink service. Users will be able to remotely print to your printer, and you will make a profit off of every print! Swipe to move to the first step.</string>
    <string name="text_page_2_bt_setup">To start, make sure your Plink IoT device is plugged in. Give it a minute to boot, and then enter the name of your device exactly how it appears in the provided package in the field below.</string>
    <string name="text_page_3_bt_setup">Next, enter the name and password of the WiFi connection that you want your IoT device to connect to.</string>
    <string name="text_page_4_bt_setup">All done! You are now a registered Plink printer owner. Go to \"Manage Printers\" to see your printer and modify details about it.</string>
    <string name="iot_uuid">94f39d297d6d437d973bfba39e49d4ee</string>
    <string name="title_printer_edit">Update Printer Settings</string>
    <string name="text_printer_display_color">Print Color</string>
    <string name="textview_set_price">Set Price</string>
    <string name="textview_set_price_color">Set Color Price</string>
    <string name="text_printer_status">Status:</string>
    <string name="text_printer_color_settings">Color Printing</string>
    <string name="text_set_location">Set Printer Location</string>
</resources>
